--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
             <img src="images/Kawsar-withbg.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div>
+            <img src="images/Kawsar-withbg.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced </p>
+            <a class="link-button" target="_blank" href="">Download Resume</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
