--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
 
         <div class="half-width">
             <h1>Welcome To</h1>
@@ -31,7 +31,7 @@
             <img src="images/Kawsar-withbg.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div>
             <img src="images/Kawsar-withbg.png" alt="">
         </div>
@@ -44,6 +44,29 @@
         </div>
 
     </section>
+    <section class="experience-area">
+        <h1>Experience</h1>
+        <div class="flexible-container">
+            <div id="full-Stack-Developer" class="experience-item">
+                <h1>Full Stack Developer</h1>
+                <h3 class="orange-color">BBBBBBBBB</h3>
+                <P>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                    work. That's why I am learning and mastering web development. I will not stop until I become the Web
+                    Development Hero.</P>
+            </div>
+            <div id="Web-dev-experience" class="experience-item">
+                <h1>Baby Web Developer</h1>
+                <h3 class="orange-color">AAAAAAAAAA</h3>
+                <P>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                    work. That's why I am learning and mastering web development. I will not stop until I become the Web
+                    Development Hero.</P>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>@peter parker 2021, a programming Hero initiatitve.</p>
+    </footer>
 </body>
 
 </html>
